[gd_scene load_steps=13 format=3 uid="uid://c18sf5c50bws6"]

[ext_resource type="PackedScene" uid="uid://qqf7tt6olgid" path="res://enemies/enemy_base/emeny_base.tscn" id="1_ow4d2"]
[ext_resource type="Texture2D" uid="uid://1og8g1dl62at" path="res://assets/enemies/eagle/eagle-attack.png" id="2_2qpnn"]
[ext_resource type="Script" path="res://enemies/eagle/eagle.gd" id="2_cacjv"]
[ext_resource type="PackedScene" uid="uid://bv38ff2gd4j1t" path="res://shooter/shooter.tscn" id="4_k3qvp"]
[ext_resource type="AudioStream" uid="uid://dn341rxx2p8ii" path="res://assets/sound/eagle_scream.mp3" id="5_4thtj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0704x"]
atlas = ExtResource("2_2qpnn")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_yju0v"]
atlas = ExtResource("2_2qpnn")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxlns"]
atlas = ExtResource("2_2qpnn")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_53rsj"]
atlas = ExtResource("2_2qpnn")
region = Rect2(120, 0, 40, 41)

[sub_resource type="SpriteFrames" id="SpriteFrames_f2beg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0704x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yju0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxlns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53rsj")
}],
"loop": true,
"name": &"fly",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_pm40f"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yfloq"]

[node name="Eagle" groups=["Enemies"] instance=ExtResource("1_ow4d2")]
collision_mask = 0
script = ExtResource("2_cacjv")

[node name="AnimatedSprite2D" parent="." index="1"]
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_f2beg")
animation = &"fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]
shape = SubResource("CircleShape2D_pm40f")

[node name="playerDetector" type="RayCast2D" parent="." index="3"]
target_position = Vector2(0, 200)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="DirectionTimer" type="Timer" parent="." index="4"]
wait_time = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource("CircleShape2D_yfloq")

[node name="Shooter" parent="." index="6" instance=ExtResource("4_k3qvp")]
speed = 80.0
bullet_key = 1
shoot_delay = 0.5

[node name="EagleCry" type="AudioStreamPlayer2D" parent="." index="9"]
stream = ExtResource("5_4thtj")

[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
